<resources>
    <string name="app_name">NicMessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="email">Email</string>
    <string name="email_mot_de_passe_oublie">Le courriel de rénitialisation du mot de passe à été envoyé</string>
    <string name="une_erreur_r_seau_c_est_produite">Une erreur réseau c\'est produite</string>
    <string name="identifiant_invalide">Email ou mot de passe invalide</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="mes_conversations">Mes Conversations</string>
    <string name="online">( En Ligne )</string>
    <string name="disconnected">( Déconnecté )</string>
    <string name="inactif">( Inactif )</string>
    <string name="absent">( Absent )</string>
    <string name="url_api" translatable="false">https://api.nicholsonrj.com</string>
    <string name="url_wss" translatable="false">wss://api.nicholsonrj.com/ws</string>
    <string name="crivez_un_message">Écrivez un message</string>
    <string name="refuser">Refuser</string>
    <string name="accepter">Accepter</string>
    <string name="mes_demandes">Mes Demandes</string>
    <string name="mes_notifications">Mes Notifications</string>
    <string name="description">Description</string>
    <string name="statut">Statut</string>
    <string name="mis_a_jour_profile">Votre profile à été mis à jour</string>
    <string name="propos">À propos</string>
    <string name="about_text">
        Une application de messagerie instantanée inspirée de Windows Live Messenger réalisée à
        la suite d\'une application web se trouvant à l\'adresse :
        \n
        <a href="https://msn.nicholsonrj.com\">https://msn.nicholsonrj.com
        </a>
    </string>
    <string name="about_text_2">Tous les droits des images appartiennent à Microsoft.</string>
    <string name="about_text_3">Développeur : Nicholson Rainville Jacques</string>
    <string name="pas_de_conversations">Vous n\'avez pas encore de conversations</string>
    <string name="pas_de_notifications">Vous n\'avez pas de nouvelles notifications</string>
    <string name="pas_de_demandes">Vous n\'avez pas de nouvelles demandes</string>
    <string name="home_button">Bouton d\'accueil</string>
    <string name="changer_votre_banni_re">Changer votre bannière</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="pas_de_compte_inscrivez_vous">Pas de compte? inscrivez-vous</string>
    <string name="short_mot_de_passe_invalide">Mot de passe invalide</string>
    <string name="email_invalide">Email invalide</string>
    <string name="mot_de_passe_invalide">Mot de passe invalide : 8 caractères, une majuscule, un chiffre et un caractère special sont requis</string>
    <string name="confirm_pas_egal">Les mots de passe ne sont pas identiques</string>
    <string name="nom_vide">Le nom ne peut pas être vide</string>
    <string name="inscription_reussi">Votre inscription est réussi, vous pouvez maintenant vous connecter</string>
    <string name="email_exist">Cette adresse courriel est déjà utilisé par un autre utilisateur</string>
</resources>