<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.about.VueAbout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propos"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/guideline_start_text"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bouttonDéconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Widget.Material3.FloatingActionButton.Large.Secondary"
        app:srcCompat="@drawable/logout"
        app:tint="@android:color/white"
        app:rippleColor="#19FFFFFF"
        app:backgroundTint="@color/couleur_principale"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="290dp"
        android:text="@string/about_text"
        android:autoLink="web"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_start_text"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_text_un"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="290dp"
        android:text="@string/about_text_2"
        android:autoLink="web"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_start_text"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_text_deux"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="290dp"
        android:text="@string/about_text_3"
        android:autoLink="web"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline_start_text"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_text_trois"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_text_un"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_text_deux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_text_trois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />

</androidx.constraintlayout.widget.ConstraintLayout>