<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.inscription.VueInscription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bann"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_transparent_blanc_bottom"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:cardCornerRadius="9dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <TextView
                    android:id="@+id/loginTitreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/s_inscrire"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutNomTextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/nom_complet"
                    app:layout_constraintTop_toBottomOf="@id/loginTitreTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:inputType="text"
                        android:autofillHints="name"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEmailTextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/layoutNomTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPasswordTextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@id/layoutEmailTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:inputType="textPassword"
                        android:autofillHints="password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutConfirmPasswordTextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirmer_le_mot_de_passe"
                    app:layout_constraintTop_toBottomOf="@id/layoutPasswordTextInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:inputType="textPassword"
                        android:autofillHints="password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnInscription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/couleur_principale"
                    android:text="@string/s_inscrire"
                    app:cornerRadius="6dp"
                    app:strokeColor="#CECECE"
                    app:layout_constraintStart_toStartOf="@id/guideline_start_btnlogin"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end_btnlogin"
                    app:layout_constraintTop_toBottomOf="@id/layoutConfirmPasswordTextInput" />

                <Button
                    android:id="@+id/btnRetourLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/grey"
                    android:text="@string/se_connecter"
                    app:cornerRadius="6dp"
                    app:strokeColor="#CECECE"
                    app:layout_constraintStart_toStartOf="@id/guideline_start_register"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end_register"
                    app:layout_constraintTop_toBottomOf="@id/layoutConfirmPasswordTextInput" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0"
                    />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.48"
                    />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start_btnlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.52"
                    />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end_btnlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="1"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_buddy"
        app:layout_constraintStart_toEndOf="@id/guideline_start_buddy"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_buddy"
        app:layout_constraintDimensionRatio="1:1"
        android:elevation="10dp"
        android:backgroundTint="@color/online"
        app:cardCornerRadius="9dp" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/buddy2" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_buddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_buddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_buddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barDeChargement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="100dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>